[package]
name = "keepcalm"
version = "0.2.5"
edition = "2021"
description = "Simple shared types for multi-threaded programs"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/mmastrac/keepcalm"

[dependencies]
serde = { version = "1", optional = true }
parking_lot = { version = "0.12.1", features = ["send_guard", "owning_ref"] }
once_cell = "1"
owning_ref = "0.4"

[dev_dependencies]
paste = "1"
smol = "1"
tokio = { version = "1", features = ["rt", "macros"] }
async-std = "1"

[features]
serde = ["dep:serde"]
global_experimental = []
async_experimental = []
