[package]
name = "keepcalm"
version = "0.3.5"
edition = "2021"
description = "Simple shared types for multi-threaded programs"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/mmastrac/keepcalm"

[dependencies]
serde = { version = "1", optional = true }
parking_lot = { version = "0.12.1", features = ["send_guard"] }
once_cell = "1"

[dev_dependencies]
paste = "1"
smol = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
async-std = "1"
futures = "0.3"
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }

[features]
serde = ["dep:serde"]
global_experimental = []
async_experimental = []

[[bench]]
name = "async_benchmark"
harness = false
required-features = ["async_experimental"]