[package]
name = "keepcalm"
version = "0.4.1"
edition = "2021"
description = "Simple shared types for multi-threaded programs"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/mmastrac/keepcalm"
# Needs OnceCell/OnceLock
rust-version = "1.76"

[dependencies]
serde = { version = "1", optional = true }
parking_lot = { version = "0.12.4", features = ["send_guard"] }

[dev-dependencies]
paste = "1"
smol = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
async-std = "1"
futures = "0.3"
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }

[features]
serde = ["dep:serde"]
async_experimental = []

[[bench]]
name = "async_benchmark"
harness = false
required-features = ["async_experimental"]
